TapGesture on PostInfoTableViewCell didn't work.

--- a/SurRound/View/Explore/PlaceItemListCell.xib
+++ b/SurRound/View/Explore/PlaceItemListCell.xib
@@ -24,7 +24,7 @@
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EBb-rD-VuB">
                         <rect key="frame" x="0.0" y="65" width="320" height="320"/>
-                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="EBb-rD-VuB" secondAttribute="height" id="cIc-Ju-97I"/>
                         </constraints>
