--- a/SurRound/View/Auth/Base.lproj/Auth.storyboard
+++ b/SurRound/View/Auth/Base.lproj/Auth.storyboard
@@ -216,40 +216,30 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="2Do-yG-BOO">
-                                <rect key="frame" x="40" y="475" width="334" height="192"/>
+                                <rect key="frame" x="40" y="475" width="334" height="120"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ugi-4O-osZ" customClass="SRAuthButton" customModule="SurRound" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XGM-Th-GW3" customClass="SRAuthButton" customModule="SurRound" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="334" height="48"/>
+                                        <color key="backgroundColor" red="0.22352941179999999" green="0.2156862745" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="48" id="HTF-id-OjO"/>
+                                        </constraints>
+                                        <state key="normal" title="Sign in as guest">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ugi-4O-osZ" customClass="SRAuthButton" customModule="SurRound" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="72" width="334" height="48"/>
                                         <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="48" id="JTc-8t-N42"/>
                                         </constraints>
-                                        <state key="normal" title="Email">
+                                        <state key="normal" title="Sign in with email">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
                                             <segue destination="QgZ-3P-hBg" kind="show" identifier="SegueLoginWithEmail" id="qLO-fB-mok"/>
                                         </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gif-I1-tg2" customClass="SRAuthButton" customModule="SurRound" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="72" width="334" height="48"/>
-                                        <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="48" id="eZb-Wg-1gJ"/>
-                                        </constraints>
-                                        <state key="normal" title="Apple ID">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XGM-Th-GW3" customClass="SRAuthButton" customModule="SurRound" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="144" width="334" height="48"/>
-                                        <color key="backgroundColor" red="0.22352941179999999" green="0.2156862745" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="48" id="HTF-id-OjO"/>
-                                        </constraints>
-                                        <state key="normal" title="Guest">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -281,6 +271,10 @@
                         <viewLayoutGuide key="safeArea" id="wbW-gQ-ZPS"/>
                     </view>
                     <navigationItem key="navigationItem" id="yFp-1L-IRz"/>
+                    <connections>
+                        <outlet property="emailSignInBtn" destination="Ugi-4O-osZ" id="Me6-Px-6y4"/>
+                        <outlet property="guestSignInBtn" destination="XGM-Th-GW3" id="mrH-Yv-eAa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JXP-E7-F0E" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
