--- a/SurRound/Modules/Notification/Views/Base.lproj/Notification.storyboard
+++ b/SurRound/Modules/Notification/Views/Base.lproj/Notification.storyboard
@@ -21,19 +21,57 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="140" id="G8h-dm-0Ih">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NotificationCell" rowHeight="140" id="G8h-dm-0Ih" customClass="NotificationCell" customModule="SurRound" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="G8h-dm-0Ih" id="eeD-Rr-Jq6">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wxu-dF-far">
-                                                    <rect key="frame" x="7" y="11" width="61" height="58"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wxu-dF-far">
+                                                    <rect key="frame" x="16" y="8" width="40" height="40"/>
+                                                    <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="40" id="pcS-sS-Pgh"/>
+                                                        <constraint firstAttribute="width" secondItem="wxu-dF-far" secondAttribute="height" id="r6C-X6-ybJ"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wiz-P9-Syr">
+                                                    <rect key="frame" x="72" y="8" width="262" height="40"/>
+                                                    <color key="backgroundColor" name="themeColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f8k-M8-u93">
+                                                    <rect key="frame" x="350" y="8" width="48" height="48"/>
+                                                    <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="f8k-M8-u93" secondAttribute="height" id="9L6-ZK-Vfy"/>
+                                                        <constraint firstAttribute="width" constant="48" id="JPY-bV-XF3"/>
+                                                    </constraints>
                                                 </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="f8k-M8-u93" secondAttribute="bottom" constant="8" id="1uc-4U-inB"/>
+                                                <constraint firstItem="wiz-P9-Syr" firstAttribute="height" relation="greaterThanOrEqual" secondItem="wxu-dF-far" secondAttribute="height" id="2e0-d1-Q1s"/>
+                                                <constraint firstItem="wiz-P9-Syr" firstAttribute="leading" secondItem="wxu-dF-far" secondAttribute="trailing" constant="16" id="2vz-K8-JnM"/>
+                                                <constraint firstItem="wiz-P9-Syr" firstAttribute="top" secondItem="wxu-dF-far" secondAttribute="top" id="9kb-6W-EfJ"/>
+                                                <constraint firstItem="wxu-dF-far" firstAttribute="top" secondItem="eeD-Rr-Jq6" secondAttribute="top" constant="8" id="B2z-v3-jH8"/>
+                                                <constraint firstItem="f8k-M8-u93" firstAttribute="leading" secondItem="wiz-P9-Syr" secondAttribute="trailing" constant="16" id="Ib5-x7-17e"/>
+                                                <constraint firstAttribute="trailing" secondItem="f8k-M8-u93" secondAttribute="trailing" constant="16" id="OBd-YS-aAD"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="wiz-P9-Syr" secondAttribute="bottom" constant="8" id="Syw-yn-a9s"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="wxu-dF-far" secondAttribute="bottom" constant="8" id="TQw-n3-Yka"/>
+                                                <constraint firstItem="f8k-M8-u93" firstAttribute="top" secondItem="wxu-dF-far" secondAttribute="top" id="Y89-lx-p2L"/>
+                                                <constraint firstItem="wxu-dF-far" firstAttribute="leading" secondItem="eeD-Rr-Jq6" secondAttribute="leading" constant="16" id="lZM-gb-0Vb"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="avatarImageView" destination="wxu-dF-far" id="nlr-0D-kds"/>
+                                            <outlet property="descLabel" destination="wiz-P9-Syr" id="tip-rc-jnW"/>
+                                            <outlet property="postImageView" destination="f8k-M8-u93" id="WtD-D8-Pmm"/>
+                                            <outlet property="postImageWidth" destination="JPY-bV-XF3" id="9IW-wb-Ze5"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
