--- a/SurRound/Modules/Notification/Views/Base.lproj/Notification.storyboard
+++ b/SurRound/Modules/Notification/Views/Base.lproj/Notification.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16085" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5zd-uY-xgV">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16092.1" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5zd-uY-xgV">
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16078.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16082.1"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,9 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9Jx-8B-DbA">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9Jx-8B-DbA">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NotificationCell" rowHeight="140" id="G8h-dm-0Ih" customClass="NotificationCell" customModule="SurRound" customModuleProvider="target">
@@ -38,9 +37,9 @@
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wiz-P9-Syr">
                                                     <rect key="frame" x="72" y="8" width="262" height="40"/>
-                                                    <color key="backgroundColor" name="themeColor"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                    <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f8k-M8-u93">
@@ -58,7 +57,7 @@
                                                 <constraint firstItem="wiz-P9-Syr" firstAttribute="leading" secondItem="wxu-dF-far" secondAttribute="trailing" constant="16" id="2vz-K8-JnM"/>
                                                 <constraint firstItem="wiz-P9-Syr" firstAttribute="top" secondItem="wxu-dF-far" secondAttribute="top" id="9kb-6W-EfJ"/>
                                                 <constraint firstItem="wxu-dF-far" firstAttribute="top" secondItem="eeD-Rr-Jq6" secondAttribute="top" constant="8" id="B2z-v3-jH8"/>
-                                                <constraint firstItem="f8k-M8-u93" firstAttribute="leading" secondItem="wiz-P9-Syr" secondAttribute="trailing" constant="16" id="Ib5-x7-17e"/>
+                                                <constraint firstItem="wiz-P9-Syr" firstAttribute="trailing" secondItem="f8k-M8-u93" secondAttribute="leading" constant="-16" id="Ib5-x7-17e"/>
                                                 <constraint firstAttribute="trailing" secondItem="f8k-M8-u93" secondAttribute="trailing" constant="16" id="OBd-YS-aAD"/>
                                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="wiz-P9-Syr" secondAttribute="bottom" constant="8" id="Syw-yn-a9s"/>
                                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="wxu-dF-far" secondAttribute="bottom" constant="8" id="TQw-n3-Yka"/>
@@ -69,14 +68,20 @@
                                         <connections>
                                             <outlet property="avatarImageView" destination="wxu-dF-far" id="nlr-0D-kds"/>
                                             <outlet property="descLabel" destination="wiz-P9-Syr" id="tip-rc-jnW"/>
+                                            <outlet property="descTrailingConstraint" destination="Ib5-x7-17e" id="v6z-cO-FVs"/>
                                             <outlet property="postImageView" destination="f8k-M8-u93" id="WtD-D8-Pmm"/>
-                                            <outlet property="postImageWidth" destination="JPY-bV-XF3" id="9IW-wb-Ze5"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="9Jx-8B-DbA" secondAttribute="bottom" id="KGb-At-cZF"/>
+                            <constraint firstAttribute="trailing" secondItem="9Jx-8B-DbA" secondAttribute="trailing" id="Wlz-BS-aGe"/>
+                            <constraint firstItem="9Jx-8B-DbA" firstAttribute="leading" secondItem="IcU-fh-RUZ" secondAttribute="leading" id="gGP-r7-gDN"/>
+                            <constraint firstItem="9Jx-8B-DbA" firstAttribute="top" secondItem="IcU-fh-RUZ" secondAttribute="top" id="jWv-vD-ssk"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="IcU-fh-RUZ"/>
                     </view>
                     <navigationItem key="navigationItem" title="Notifications" id="4i9-yM-dBf"/>
