--- a/SurRound/Modules/HomeMap/Views/Base.lproj/Home.storyboard
+++ b/SurRound/Modules/HomeMap/Views/Base.lproj/Home.storyboard
@@ -45,7 +45,8 @@
                                                 </view>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BUJ-OM-MCT">
                                                     <rect key="frame" x="13" y="4" width="44" height="44"/>
-                                                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="tintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="44" id="4OR-Qs-bPL"/>
                                                         <constraint firstAttribute="width" secondItem="BUJ-OM-MCT" secondAttribute="height" id="lcs-vi-Ztc"/>
